examples/invalid_policies/duplicate_violation_block.argx
module invalid.duplicate_violation

policy Bad {
    deny external_execution
    on violation { action warn }
    on violation { action block }
}
